--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "axios": "^0.24.0",
+    "ng-dynamic-component": "^8.0.1",
     "rxjs": "~6.6.0",
+    "storyblok-js-client": "^4.1.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
