--- a/package.json
+++ b/package.json
@@ -18,8 +18,26 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@angular/service-worker": "^12.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ng-select/ng-select": "^7.0.1",
+    "@ngrx/effects": "^12.1.0",
+    "@ngrx/router-store": "^12.1.0",
+    "@ngrx/store": "^12.1.0",
+    "@spartacus/assets": "~4.2.0",
+    "@spartacus/cart": "~4.2.0",
+    "@spartacus/checkout": "~4.2.0",
+    "@spartacus/core": "~4.2.0",
+    "@spartacus/storefront": "~4.2.0",
+    "@spartacus/styles": "~4.2.0",
+    "@spartacus/user": "~4.2.0",
+    "angular-oauth2-oidc": "^10.0.1",
     "axios": "^0.24.0",
+    "bootstrap": "^4.3.1",
+    "i18next": "^20.2.2",
+    "i18next-http-backend": "^1.2.2",
     "ng-dynamic-component": "^8.0.1",
+    "ngx-infinite-scroll": "^8.0.0",
     "rxjs": "~6.6.0",
     "storyblok-js-client": "^4.1.5",
     "tslib": "^2.3.0",
@@ -27,8 +45,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.5",
+    "@angular-devkit/schematics": "^12.0.5",
     "@angular/cli": "~12.2.5",
     "@angular/compiler-cli": "~12.2.0",
+    "@spartacus/schematics": "^4.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
